--- a/districts/alappuzha.html
+++ b/districts/alappuzha.html
@@ -6,7 +6,7 @@
     <title>alappuzha</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 </head>
 <body>
@@ -24,7 +24,7 @@
         <!-- Navigation section -->
         <div class="row nav-padding">
         <div class="col-xl-3 d-flex justify-content-start">
-            <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+            <img src="../Images//keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
             <div class="d-flex flex-column align-self-center name-banner">
             <h4>keralatourism.org</h4>
             <p>Welcome to God's own country</p>
@@ -32,11 +32,11 @@
         </div>
         <div class="col-xl-9 d-flex justify-content-end">
             <ul class="d-flex flex-row nav-links justify-content-between">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/navigation/login.html">Login</a></li>
-            <li><a href="/navigation/signup.html">Sign Up</a></li>
-            <li><a href="/navigation/contactus.html">Contact Us</a></li>
-            <li><a href="/navigation/aboutus.html">About Us</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../navigation/login.html">Login</a></li>
+            <li><a href="../navigation/signup.html">Sign Up</a></li>
+            <li><a href="../navigation/contactus.html">Contact Us</a></li>
+            <li><a href="../navigation/aboutus.html">About Us</a></li>
             </ul>
         </div>
         </div>
@@ -44,8 +44,8 @@
         <div class="row title-content d-flex align-items-center">
             <div class="col-xl-1"></div>
             <div class="col-xl-3 d-flex justify-content-start">
-                <a href="/navigation/explore.html">
-                    <img src="/images/back-button.png" alt="Back button link">Back to districts
+                <a href="../navigation/explore.html">
+                    <img src="../Images//back-button.png" alt="Back button link">Back to districts
                 </a>
             </div>
             <div class="col-xl-8 d-flex justify-content-start">
@@ -54,7 +54,7 @@
         </div>
         <div class="row">
             <div class="col-xl-4 explore-places">
-                <img src="/images/alleppeybackwater.jpg" alt="Alleppey backwaters">
+                <img src="../Images//alleppeybackwater.jpg" alt="Alleppey backwaters">
                 <h6>Alleppey Backwaters</h6>
             </div>
             <div class="col-xl-6 places-content">
@@ -78,13 +78,13 @@
                 </p>
             </div>
             <div class="col-xl-4 explore-places">
-                <img src="/images/alappuzhabeach.jpg" alt="Alappuzha Beach">
+                <img src="../Images//alappuzhabeach.jpg" alt="Alappuzha Beach">
                 <h6>Alappuzha Beach</h6>
             </div>
         </div>
         <div class="row">
             <div class="col-xl-4 explore-places">
-                <img src="/images/chakkulathukavutempple.jpg" alt="Chakkulathukavu Temple">
+                <img src="../Images//chakkulathukavutempple.jpg" alt="Chakkulathukavu Temple">
                 <h6>Chakkulathukavu Temple</h6>
             </div>
             <div class="col-xl-6 places-content">
