--- a/districts/kasargod.html
+++ b/districts/kasargod.html
@@ -6,7 +6,7 @@
     <title>kasargod</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <div class="col-xl-12 rounded">
@@ -23,7 +23,7 @@
         <!-- Navigation section -->
         <div class="row nav-padding">
         <div class="col-xl-3 d-flex justify-content-start">
-            <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+            <img src="../Images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
             <div class="d-flex flex-column align-self-center name-banner">
             <h4>keralatourism.org</h4>
             <p>Welcome to God's own country</p>
@@ -31,11 +31,11 @@
         </div>
         <div class="col-xl-9 d-flex justify-content-end">
             <ul class="d-flex flex-row nav-links justify-content-between">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/navigation/login.html">Login</a></li>
-            <li><a href="/navigation/signup.html">Sign Up</a></li>
-            <li><a href="/navigation/contactus.html">Contact Us</a></li>
-            <li><a href="/navigation/aboutus.html">About Us</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../navigation/login.html">Login</a></li>
+            <li><a href="../navigation/signup.html">Sign Up</a></li>
+            <li><a href="../navigation/contactus.html">Contact Us</a></li>
+            <li><a href="../navigation/aboutus.html">About Us</a></li>
             </ul>
         </div>
         </div>
@@ -43,8 +43,8 @@
         <div class="row title-content d-flex align-items-center">
             <div class="col-xl-1"></div>
             <div class="col-xl-3 d-flex justify-content-start">
-                <a href="/navigation/explore.html">
-                    <img src="/images/back-button.png" alt="Back button link">Back to districts
+                <a href="../navigation/explore.html">
+                    <img src="../Images/back-button.png" alt="Back button link">Back to districts
                 </a>
             </div>
             <div class="col-xl-8 d-flex justify-content-start">
@@ -53,7 +53,7 @@
         </div>
         <div class="row">
             <div class="col-xl-4 explore-places">
-                <img src="/images/bekalfort.jpg" alt="Bekal Fort">
+                <img src="../Images/bekalfort.jpg" alt="Bekal Fort">
                 <h6>Bekal Fort</h6>
             </div>
             <div class="col-xl-6 places-content">
@@ -74,7 +74,7 @@
                 </p>
             </div>
             <div class="col-xl-4 explore-places">
-                <img src="/images/parappawildlifesanctuary.jpg" alt="Parappa Wildlife Sanctuary">
+                <img src="../Images/parappawildlifesanctuary.jpg" alt="Parappa Wildlife Sanctuary">
                 <h6>Parappa Wildlife Sanctuary</h6>
             </div>
         </div>
