--- a/navigation/signup.html
+++ b/navigation/signup.html
@@ -6,7 +6,7 @@
     <title>signup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <div class="col-xl-12 rounded">
@@ -23,7 +23,7 @@
         <!-- Navigation section -->
         <div class="row nav-padding">
             <div class="col-xl-3 d-flex justify-content-start">
-                <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+                <img src="../Images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
                 <div class="d-flex flex-column align-self-center name-banner">
                 <h4>keralatourism.org</h4>
                 <p>Welcome to God's own country</p>
@@ -31,11 +31,11 @@
             </div>
             <div class="col-xl-9 d-flex justify-content-end">
                 <ul class="d-flex flex-row nav-links justify-content-between">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/navigation/login.html">Login</a></li>
-                <li><a href="/navigation/signup.html" class="active">Sign Up</a></li>
-                <li><a href="/navigation/contactus.html">Contact Us</a></li>
-                <li><a href="/navigation/aboutus.html">About Us</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="navigation/login.html">Login</a></li>
+                <li><a href="navigation/signup.html" class="active">Sign Up</a></li>
+                <li><a href="navigation/contactus.html">Contact Us</a></li>
+                <li><a href="navigation/aboutus.html">About Us</a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-xl-4"></div>
             <div class="col-xl-8">
-                <form action="/index.html" class="login-content">
+                <form action="../index.html" class="login-content">
                     <div class="row">
                         <div class="col-xl-4 mb-3">
                             <label for="firstname" class="form-label">First Name</label>
